# new

./: AGENTS.md  Cargo.toml  README.md
src/: git.rs  main.rs  recipes.rs  tests.rs
src/commands/: edit.rs  init.rs  list.rs  mod.rs
src/hooks/: commands.rs  mod.rs  placeholders.rs  remove_git.rs
src/hooks/placeholders/: replacer.rs
