[package]
license = "MIT"
name = "new-cli"
edition = "2024"
version = "0.1.0"
readme = "README.md"
repository = "https://github.com/m1guelpf/new-cli"
authors = ["Miguel Piedrafita <rust@miguel.build>"]
description = "Quickly create new projects from templates"

[[bin]]
name = "new"
path = "src/main.rs"


[dependencies]
toml = "0.8.20"
dirs = "6.0.0"
inquire = "0.7.5"
path-absolutize = "3.1.1"
clap = { version = "4.5.32", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
