[package]
license = "MIT"
name = "new-cli"
edition = "2024"
version = "0.2.1"
readme = "README.md"
repository = "https://github.com/m1guelpf/new-cli"
authors = ["Miguel Piedrafita <rust@miguel.build>"]
description = "Quickly create new projects from templates"

[[bin]]
name = "new"
path = "src/main.rs"


[dependencies]
dirs = "6.0.0"
grep = "0.3.2"
ignore = "0.4"
toml = "0.8.20"
regex = "1.11.1"
inquire = "0.7.5"
path-absolutize = "3.1.1"
clap = { version = "4.5.32", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
