[package]
license = "MIT"
name = "new-cli"
edition = "2024"
version = "0.2.1"
readme = "README.md"
repository = "https://github.com/m1guelpf/new-cli"
authors = ["Miguel Piedrafita <rust@miguel.build>"]
description = "Quickly create new projects from templates"

[[bin]]
name = "new"
path = "src/main.rs"


[dependencies]
anyhow = "1.0.97"
dirs = "6.0.0"
git2 = "0.20.0"
ignore = "0.4.25"
toml = "0.9.8"
inquire = "0.9.1"
path-absolutize = "3.1.1"
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
grep-matcher = "0.1.8"
grep-regex = "0.1.14"
eserde = { version = "0.1.7", features = ["toml"] }
thiserror = "2.0.17"
